<resources>
    <string name="app_name">Mayowa\'s Resume</string>
    <string name="todo">TODO</string>
    <string name="oluwamayowa_oluwagbade">Oluwamayowa Oluwagbade</string>
    <string name="android_developer_kotlin">Android developer, Kotlin</string>
    <string name="todo2">TODO2</string>
    <string name="let_s_get_to_work">Let\'s get to work</string>
    <string name="todo3">TODO3</string>
    <string name="_234_809_328_6966">: +234 809 328 6966</string>
    <string name="todo4">TODO4</string>
    <string name="oluwamayowamd_gmail_com">: oluwamayowamd@gmail.com</string>
    <string name="todo5">TODO5</string>
    <string name="https_linkedin_com_mayowamd">: https://linkedin.com/mayowamd</string>
    <string name="todo6">TODO6</string>
    <string name="https_github_com_gitstoic">: https://github.com/gitstoic</string>
    <string name="oluwamayowa_oluwagbade2">Oluwamayowa Oluwagbade</string>
    <string name="android_developer_kotlin2">Android developer, Kotlin</string>
    <string name="todo7">TODO7</string>
    <string name="education">Education</string>
    <string name="tools">Tools</string>
    <string name="todo8">TODO8</string>
    <string name="_2022">2022</string>
    <string name="mobile_development_internship_kotlin">Mobile Development Internship [Kotlin]</string>
    <string name="hng_internship_9_0_zuri">HNG Internship 9.0, Zuri</string>
    <string name="october_present_ongoing">October - Present [Ongoing]</string>
    <string name="todo0">TODO0</string>
    <string name="_2022a">2022</string>
    <string name="android_beginner_s_level_training_program_kotlin">Android Beginner\'s Level Training Program [Kotlin]</string>
    <string name="kodecamp_2_0_kodehauz">KODECAMP 2.0, KODEHAUZ</string>
    <string name="marcb_july_completed">Marcb - July [Completed]</string>
    <string name="todoq">TODOq</string>
    <string name="_2012_2019">2012 - 2019</string>
    <string name="medicine_and_surgery_mb_bs">Medicine and Surgery [MB;BS]</string>
    <string name="college_of_medicine_unilag">COLLEGE OF MEDICINE. UNILAG</string>
    <string name="completed">[Completed]</string>
    <string name="contact">Contact</string>
    <string name="i_am_currently_learning_kotlin_as_primary_language_of_use_i_have_worked_on_several_basic_applications_as_is_included_in_my_github_and_i_am_open_for_collaborations_do_click_on_the_button_below_to_reach_out_to_me">I am an aspiring Mobile Android Developer, currently learning Kotlin as a beginner, I am currently employed in the healthcare sector and interested in technology and its intersection with health. I have worked on several basic applications as is included in my Github and I am currently open for internship and entry level jobs alone.</string>
    <string name="i_am_a_mobile_android_developer">I am a Mobile Android Developer</string>
    <string name="about">About</string>
    <string name="tools0">Tools</string>
    <string name="education0">Education</string>
    <string name="android_developer_kotlin0">Android developer, Kotlin</string>
    <string name="oluwamayowa_oluwagbade0">Oluwamayowa Oluwagbade</string>
    <string name="todow">TODOw</string>
    <string name="todoe">TODOe</string>
    <string name="todor">TODOr</string>
    <string name="discord">Discord</string>
    <string name="note_all_icons_are_gotten_from_fonts_google_com_icons_and_icons8_com">NOTE: All icons are gotten from fonts.google.com/icons and icons8.com</string>
    <string name="oluwamayowa_oluwagbade00">Oluwamayowa Oluwagbade</string>
    <string name="android_developer_kotlin00">Android developer, Kotlin</string>
    <string name="todot">TODOr</string>
    <string name="education00">Education</string>
    <string name="tools00">Tools</string>
    <string name="tools_i_am_familiar_with_and_employ_regularly">Tools I am familiar with and employ regularly:</string>
    <string name="todoy">TODOy</string>
    <string name="android_studio">Android Studio</string>
    <string name="todou">TODOu</string>
    <string name="figma">Figma</string>
    <string name="github">Github</string>
    <string name="trello">Trello</string>
    <string name="kotlin_playground">Kotlin Playground</string>
    <string name="slack">Slack</string>
    <string name="todoi">TODO</string>
    <string name="todop">TODOp</string>
    <string name="todoa">TODOa</string>
    <string name="todoo">TODOo</string>
    <string name="i_am_a_quick_learner_diligent_and_ready_to_put_in_the_time_necessary_to_accomplish_successful_projects_i_am_looking_forward_to_working_with_experienced_professionals_and_teams">I am a quick learner, diligent and ready to put in the time necessary to accomplish successful projects.I am looking forward to working with experienced professionals and teams.</string>
    <string name="what_i_can_do">What I can do</string>
    <string name="tools000">Tools</string>
    <string name="tools00000">Tools</string>
</resources>